Reset migrations for blog.models and fixed issue with delete button not showing up on comments

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -113,6 +113,10 @@ html {
     font-family: 'DynaPuff';
 }
 
+.submit-button {
+    background-color: aquamarine;
+}
+
 .shop-now-button {
     font-size: 25px;
 }
